fix: fix responsiveness on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -22,23 +22,23 @@ html, body {
         height: 150px;
     }
     #art {
-        top: 35%;
+        top: 45%;
         left: 30%;
     }
     #code {
-        top: 35%;
+        top: 45%;
         left: 9%;
     }
     #music {
-        top: 48%;
+        top: 58%;
         left: 48%;
     }
     #media {
-        top: 48%;
+        top: 58%;
         left: 6%;
     }
     #about-me {
-        top: 58%;
+        top: 68%;
         left: 30%;
     }
 }
